# gpu-orchestrator

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
claude/: gpu-intercept.sh
config/: config.yaml.example
lifecycle/: process.sh  systemd.sh
src/gpu_orchestrator/: __init__.py  cli.py  config.py  health.py  lifecycle.py  logging.py  patterns.py
tests/: test_config.py  test_health.py  test_patterns.py
